<resources>
    <string name="app_name">Mobile Registration Client</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_username">Username</string>

    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="back">Back</string>
    <string name="reset">Reset</string>
    <string name="fullName">Full Name</string>
    <string name="dataOfBirth">Date Of Birth</string>
    <string name="date">Date</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="ethiopian">Ethiopian</string>
    <string name="foreigner">Foreigner</string>
    <string name="gender">Gender</string>
    <string name="nationality">Nationality</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="parentId">Parent ID</string>
    <string name="introducerID">Introducer ID</string>
    <string name="introducerRelation">Introducer Relation</string>
    <string name="Iris">Iris</string>
    <string name="finger">Finger</string>
    <string name="face">Face</string>
    <string name="scan">Scan</string>
    <string name="close">Close</string>
    <string name="capture">capture</string>
    <string name="fourLeftFingers">Four Left Fingers</string>
    <string name="fourRightFingers">Four Right Fingers</string>
    <string name="twoThumbs">Two Thumb Fingers</string>
    <string name="title_setting">Setting</string>
    <string name="action_language_setting">Language</string>
    <string name="system_sync">Sync</string>
    <string name="pending_approval">Pending Approval</string>
    <string name="registration">Registration</string>
    <string name="notification">Notification</string>
    <string name="upload">Upload</string>
    <string name="sub_for_registration">New registration | Update | Lost</string>
    <string name="no_of_registration">60,000,000 registered</string>
    <string name="sub_sync">Sync configuration data</string>
    <string name="time_info">2 hours ago</string>
    <string name="search">Search</string>
    <string name="indicators">Indicators</string>
    <string name="num_of_notification">100</string>
    <string name="num_of_pending_approval">200 pending</string>
    <string name="num_of_pending_upload">111 Pending</string>
    <string name="num_of_registrant">150</string>
    <string name="sub_approval">Approve Registration</string>
    <string name="sub_upload">Upload individuals data</string>
    <string name="operators_biometric">Take operaters Bio</string>
    <string name="sub_operators">Officers biometric data</string>
    <string name="center_remap">Center Remap</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="update">10 Updates</string>
    <string name="approval_time">10min ago</string>
    <string name="access_time_upload">5 min ago</string>
    <string name="new_registration">Register</string>
    <string name="lost_id">Lost ID</string>
    <string name="update_record">Update Record</string>
    <string name="document_upload">Documents</string>
    <string name="nav_registration" translatable="false">Registration</string>
    <string name="category_nav_notification" translatable="false">Notifications</string>
    <string name="title_nav_notification" translatable="false">Notification</string>
    <string name="nav_home">Home</string>
    <string name="nav_pending_approval">Pending approval</string>
    <string name="nav_notification">Notifications</string>
    <string name="nav_sync">Sync</string>
    <string name="nav_pre_registration">Pre registration</string>
    <string name="title_nav_profile_details">Profile</string>
    <string name="action_sign_out">Signout</string>
    <string name="poi_prompt">Choose a POI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="attach">Attach</string>
</resources>
