<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dashboard_item"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".ui.home.Dashboard">


    <ImageView
        android:id="@+id/close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:src="@drawable/ic_close"
        app:tint="@color/light_black" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardNewRegistration"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:checkable="true"
            android:clickable="true"
            android:elevation="1dp"
            android:focusable="true"
            android:onClick="newRegistrationProcess"
            android:foreground="@drawable/card_forground"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Media -->
                <ImageView
                    android:id="@+id/imageNewRegistration"
                    android:layout_width="80dp"
                    android:layout_height="80dp"

                    android:layout_marginLeft="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:contentDescription="@string/new_registration"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_new_registration"
                    app:tint="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_registration"

                        android:textAppearance="@style/registration"
                        android:textColor="@color/primary_text" />


                </LinearLayout>


            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardUpdate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:checkable="true"
        android:clickable="true"
        android:elevation="1dp"
        android:focusable="true"
        android:foreground="@drawable/card_forground"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Media -->
            <ImageView
                android:id="@+id/imageUpdate"
                android:layout_width="80dp"
                android:layout_height="80dp"

                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:contentDescription="@string/update_record"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_update"
                app:tint="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_record"

                    android:textAppearance="@style/registration"
                    android:textColor="@color/primary_text" />


            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardLostId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:checkable="true"
        android:clickable="true"
        android:elevation="1dp"
        android:focusable="true"
        android:foreground="@drawable/card_forground"
        android:padding="100dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Media -->
            <ImageView
                android:id="@+id/imageLostId"
                android:layout_width="80dp"
                android:layout_height="80dp"

                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:contentDescription="@string/new_registration"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_lost_id"
                app:tint="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lost_id"

                    android:textAppearance="@style/registration"
                    android:textColor="@color/primary_text" />


            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</LinearLayout>

</LinearLayout>